--- a/srfi-160.html
+++ b/srfi-160.html
@@ -34,6 +34,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>Draft #8 published: 2019/1/13</li>
   <li>Draft #9 published: 2019/3/11</li>
   <li>Draft #10 published: 2019/5/21</li>
+  <li>Draft #11 published: 2019/7/31</li>
 </ul>
 
 <H1>Abstract</H1>
