--- a/srfi-160.html
+++ b/srfi-160.html
@@ -271,7 +271,7 @@ vectors specifically.
         <br />
       </dd>
 
-      <dt><i>pred?</i></dt>
+      <dt><i>pred</i></dt>
       <dd>
         Must be a procedure taking one or more
         arguments that returns one value, which is treated as a
@@ -344,6 +344,20 @@ vectors specifically.
 
     </dl>
 
+
+<H2>Packaging</H2>
+
+<p>
+For each @vector type, there is a corresponding library named
+<code>(srfi 160 @)</code>, and if an implementation provides a given
+type, it must provide that library as well.  In addition, the
+library <code>(srfi 160 base)</code> provides a few basic
+procedures for all @vector types.  If a particular type is not
+provided by an implementation, 
+then it is an error to call the corresponding procedures in
+this library.
+Note that there is no library named <code>(srfi 160)</code>.
+</p>
 
 <H2>Procedures</H2>
 
@@ -479,72 +493,76 @@ to each, returning respectively a @vector of the results,
 an undefined value with the results placed back in <i>@vec</i>,
 and an undefined value with no change to <i>@vec</i>.</p>
 
-<p><code>(@vector-count <i>pred? @vec</i>) -> exact nonnegative integer</code> [SRFI 133]</p>
+<p><code>(@vector-count <i>pred @vec</i>) -> exact nonnegative integer</code> [SRFI 133]</p>
 
-Call <i>pred?</i> on each element of <i>@vec</i> and
+Call <i>pred</i> on each element of <i>@vec</i> and
 return the number of calls that return true.</p>
 
 <p><code>(@vector-cumulate <i>f knil @vec</i>) -> @vector</code> [SRFI 133]</p>
 
-<p>Like <code>@vector-fold</code>, but returns an @vector of partial results
-rather than just the final result.</p>
+<p>Like <code>@vector-fold</code>, but returns an @vector with the same length as @vec.
+The <i>n</i>th element of the result vector is the result of folding over the
+first <i>n</i> elements of <i>@vector</i>, but should be computed more
+efficiently.</p>
 
 <H3>Searching</H3>
 
-<p><code>(@vector-take-while <i>pred? @vec</i> -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-take-while <i>pred @vec</i><code>)</code> -> @vector</code> [SRFI 152]</p>
 
-<p><code>(@vector-take-while-right <i>pred? @vec</i> -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-take-while-right <i>pred @vec</i>) -> @vector</code> [SRFI 152]</p>
 
-<p>Return the shortest prefix/suffix of <i>@vec</i> all of whose elements
-satisfy <i>pred?</i>.
+<p>Return the longest prefix/suffix of <i>@vec</i> all of whose elements
+satisfy <i>pred</i>.
 
-<p><code>(@vector-drop-while <i>pred? vec</i> -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-drop-while <i>pred vec</i>) -> @vector</code> [SRFI 152]</p>
 
-<p><code>(@vector-drop-while-right <i>pred? vec</i> -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-drop-while-right <i>pred vec</i>) -> @vector</code> [SRFI 152]</p>
 
-Drops the longest initial prefix/suffix of <i>@vec</i> such that all its
+Drop the longest initial prefix/suffix of <i>@vec</i> such that all its
 elements satisfy <i>pred</i>.</p>
 
-<p><code>(@vector-index <i>pred? @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
+<p><code>(@vector-index <i>pred @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
 
-<p><code>(@vector-index-right <i>pred? @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
+<p><code>(@vector-index-right <i>pred @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
 
 <p>Return the index of the first/last element of <i>@vec</i> that
-satisfies <i>pred?</i>.
+satisfies <i>pred</i>, or <code>#f</code> if there is no such element.
 
-<p><code>(@vector-skip <i>pred? @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
+<p><code>(@vector-skip <i>pred @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
 
-<p><code>(@vector-skip-right <i>pred? @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
+<p><code>(@vector-skip-right <i>pred @vec</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
 
 <p>Returns the index of the first/last element of <i>@vec</i> that
-does not satisfy <i>pred?</i>.
+does not satisfy <i>pred</i>, or <code>#f</code> if there is no such element.
 
-<p><code>(@vector-any <i>pred? @vec</i>) -> value or boolean</code> [SRFI 133]</p>
+<p><code>(@vector-any <i>pred @vec</i>) -> value or boolean</code> [SRFI 133]</p>
 
-<p>Returns first element from the <i>@vec</i> which
-satisfies <i>pred?</i>, or <code>#f</code> if there is no such element.
-If <i>@vec</i> is empty, return <code>#f</code></p>
+<p>Invokes <i>pred</i> on each element of <i>@vec</i> in order, and returns the
+first such result other than <code>#f</code>,
+or <code>#f</code> if there is no such result.<p>
 
-<p><code>(@vector-every <i>pred? @vec</i>) -> value or boolean</code> [SRFI 133]</p>
+<p><code>(@vector-every <i>pred @vec</i>) -> value or boolean</code> [SRFI 133]</p>
 
-<p>If all elements from <i>@vec</i> satisfy <i>pred?</i>,
-return the last element.  If not all do, return <code>#f</code>.
-If <i>@vec</i> is empty, return <code>#t</code></p>
+<p>Invokes <i>pred</i> on each element of <i>@vec</i> in order until
+the result is <code>#f</code>, and then returns <code>#f</code>.
+If there is no such result, then the result of the last call to
+<i>pred</i> is returned.  If <i>@vec</i> is empty, <code>#t</code>
+is returned.</p>
 
-<p><code>(@vector-partition <i>pred? @vec</i>) -> @vector and integer</code> [SRFI 133]</p>
+<p><code>(@vector-partition <i>pred @vec</i>) -> @vector and integer</code> [SRFI 133]</p>
 
 <p>Returns an @vector of the same type as <i>@vec</i>, but with all elements
-satisfying <i>pred?</i> in the leftmost part of the vector and the other
+satisfying <i>pred</i> in the leftmost part of the vector and the other
 elements in the remaining part.  The order of elements is otherwise
 preserved.  Returns two values, the new @vector and the number of 
-elements satisfying <i>pred?</i>.</p>
+elements satisfying <i>pred</i>.</p>
 
-<p><code>(@vector-filter <i>pred? @vec</i> -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-filter <i>pred @vec</i>) -> @vector</code> [SRFI 152]</p>
 
-<p><code>(@vector-remove <i>pred? @vec</i> -> @vector</code> [SRFI 152]</p>
+<p><code>(@vector-remove <i>pred @vec</i>) -> @vector</code> [SRFI 152]</p>
 
 <p>Return an @vector containing the elements of @vec that satisfy / do not satisfy
-<i>pred?</i>.
+<i>pred</i>.
 
 <H3>Mutators</H3>
 
@@ -587,17 +605,17 @@ vector. Terminates when <i>end</i>-<i>start</i> elements have been generated.
 
 <H3>Conversion</H3>
 
-<p><code>(@vector->list <i>@vec</i> [<i>start</i> [<i>end</i>]]) -> proper-list</code> [SRFI 4]</p>
+<p><code>(@vector->list <i>@vec</i> [<i>start</i> [<i>end</i>]]) -> proper-list</code> [SRFI 4 plus <i>start</i> and <i>end</i>]</p>
 
 <p><code>(reverse-@vector->list <i>@vec</i> [<i>start</i> [<i>end</i>]]) -> proper-list</code> [SRFI 133]</p>
 
-<p><code>(list->@vector <i>proper-list</i>) -> @vector</code> [SRFI 4]</p>
+<p><code>(list->@vector <i>proper-list</i>) -> @vector</code> [SRFI 4 plus <i>start</i> and <i>end</i>]</p>
 
 <p><code>(reverse-list->@vector <i>proper-list</i>) -> @vector</code> [SRFI 133]</p>
 
-<p><code>(@vector->vector <i>@vec</i>) -> vector</code></p>
+<p><code>(@vector->vector <i>@vec</i> [<i>start</i> [<i>end</i>]]) -> vector</code></p>
 
-<p><code>(vector->@vector <i>vec</i>) -> @vector</code></p>
+<p><code>(vector->@vector <i>vec</i>  [<i>start</i> [<i>end</i>]]) -> @vector</code></p>
 
 
 <p>Returns a list, @vector, or heterogeneous vector with the same
