added back acknowledgements section

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -16,7 +16,8 @@ Homogeneous numeric vector libraries
 
 <H1>Author</H1>
 
-John Cowan (based on SRFI 4 by Marc Feeley)
+John Cowan (based on SRFI 4 by Marc Feeley)<br/>
+Shiro Kawai (contributed a major patch).
 
 <H1>Status</H1>
 
@@ -821,6 +822,14 @@ Can be adapted to any R7RS system.</li>
 The assumption is that if s16 works, everything works.</li>
 
 </ul>
+
+<H1>Acknowledgements</H1>
+
+<p>Thanks to all participants in the SRFI 160 mailing list over the
+unconscionably long time it took me to get this proposal to finalization.
+Special thanks to Shiro Kawai for bringing up many issues and contributing
+the code that extended many procedures from one @vector to many.
+</p>
 
 <H1>Copyright</H1>
 Copyright &copy; John Cowan 2018.
