--- a/srfi-160.html
+++ b/srfi-160.html
@@ -867,8 +867,9 @@ permit persons to whom the Software is furnished to do so, subject to
 the following conditions:
 </p>
 <p>
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
+The above copyright notice and this permission notice (including the
+next paragraph) shall be included in all copies or substantial
+portions of the Software.
 </p>
 <p>
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
