Update <srfi-editors> address.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -883,7 +883,7 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 
 <hr>
-<address>Editor: <a href="mailto:srfi minus editors at srfi dot schemers dot org">
+<address>Editor: <a href="mailto:srfi-editors+at+srfi+dot+schemers+dot+org">
   Arthur A. Gleckler</a></address>
 
   </body>
